--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,344 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
-  block-size: 100%;
+    block-size: 100%;
 }
 
 .page {
-  inline-size: 1200px;
-  block-size: 100%;
-  margin: auto;
-  color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-size: 18px;
-  background-color: #1b1919;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    inline-size: 1200px;
+    block-size: 100%;
+    margin: auto;
+    color: #fff;
+    font-family: 'Fira Sans Condensed', sans-serif;
+    font-size: 18px;
+    background-color: #1b1919;
+}
+
+.content {
+    display: grid;
+    grid-template-columns: 711px 399px;
+    grid-template-areas: "result content__details";
+    place-items: end;
+    width: 1140px;
+    gap: 30px;
+    inline-size: 1140px;
+}
+
+.result {
+    grid-area: result;
+    width: 711px;
+}
+
+.result__video-container {
+    position: relative;
+    width: 711px;
+    height: 386px;
+    margin-bottom: 16px;
+    margin-block-end: 16px;
+}
+
+.result__video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.search-form {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+    gap: 40px;
+    height: 54px;
+}
+
+.search-form__checkbox-list {
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    padding-bottom: 5px;
+}
+
+.search-form__fieldset {
+    border: none;
+    flex-grow: 1;
+}
+
+.search-form__fieldset-title {
+    font-family: 'Fira Sans Condensed', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    padding-bottom: 5px;
+}
+
+.search-form__label {
+    display: flex;
+    width: fit-content;
+}
+
+.search-form__textfield {
+    font-family: 'Fira Sans Condensed', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    appearance: none;
+    width: 225px;
+    height: 27px;
+    background: transparent;
+    border-width: 1px 0 1px 0;
+    border-style: solid;
+    border-color: #FFFFFF;
+    color: #FFFFFFB2;
+}
+
+.search-form__textfield:focus {
+    outline: none;
+}
+
+.search-form__textfield:active {
+    border: 1px solid #FFFFFF;
+}
+
+.search-form__label:has(:focus-visible) {
+    outline: 1px solid #FFFFFF;
+    outline-offset: 3px;
+    border-radius: 0;
+}
+
+.search-form__label {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    text-align: left;
+}
+
+.search-form__pseudo-checkbox {
+    display: inline-block;
+    position: relative;
+    height: 19px;
+    width: 19px;
+    border: 1px solid #FFFFFF;
+    cursor: pointer;
+}
+
+.search-form__pseudo-checkbox::after {
+    content: "";
+    position: absolute;
+    width: 17px;
+    height: 17px;
+    background-color: #FFFFFF;
+    opacity: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.search-form__checkbox:checked+.search-form__pseudo-checkbox::after {
+    opacity: 1;
+}
+
+.search-form__pseudo-checkbox:has(:focus-visible) {
+    outline: 1px solid #FFFFFF;
+    border-radius: 0;
+}
+
+.search-form__label:hover .search-form__label-text {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.button {
+    font-family: 'Fira Sans Condensed', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-align: center;
+    color: #FFFFFF;
+    border: 1px solid #FFFFFF;
+    background: transparent;
+    cursor: pointer;
+    height: 34px;
+}
+
+.button:focus {
+    outline: none;
+}
+
+.search-form__submit-button {
+    width: 194px;
+    height: 34px;
+    margin-left: auto;
+}
+
+.search-form__submit-button:focus-visible {
+    outline: 1px solid #FFFFFF;
+    border-radius: 0;
+}
+
+.search-form__submit-button:active {
+    background-color: #545050;
+}
+
+.search-form__submit-button:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.more-button {
+    inline-size: calc(100% - 4px);
+    margin: 30px 2px 0;
+    padding-bottom: 2px;
+}
+
+.content__details {
+    grid-area: content__details;
+    inline-size: 100%;
+    block-size: 100%;
+    max-inline-size: 399px;
+    display: flex;
+    flex-direction: column;
+    gap: 26px;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-self: stretch;
+    max-width: 399px;
+}
+
+.title {
+    font-family: Oswald;
+    font-weight: 700;
+    font-size: 75px;
+    line-height: 94%;
+    letter-spacing: 0%;
+    text-transform: uppercase;
+    height: 210px;
+    width: 259px;
+}
+
+.content__accent {
+    color: #545050;
+}
+
+.content__list-container {
+    position: relative;
+    max-height: 298px;
+    overflow: auto;
+    width: 100%;
+    padding-top: 3px;
+    block-size: 298px;
+}
+
+.content__card-link_current {
+    background-color: #545050;
+}
+
+.content__list {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 100%;
+}
+
+.content__list-item {
+    width: 390px;
+    padding-left: 2px;
+}
+
+.content__card-link {
+    display: block;
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.content__card-link:focus-visible {
+    outline: 1px solid #FFFFFF;
+    border-radius: 0;
+}
+
+.content__video-card {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.content__video-card-title {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-family: Oswald;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-transform: uppercase;
+    padding-bottom: 6px;
+}
+
+.content__video-card-description {
+    display: -webkit-box;
+    white-space: nowrap;
+    overflow: hidden;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    font-family: 'Fira Sans Condensed', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 16.2px;
+    letter-spacing: 0%;
+}
+
+.content__video-card-thumbnail {
+    width: 194px;
+    height: 103px;
+    object-position: cover;
+}
+
+.content__video-card-description-container {
+    flex-grow: 1;
+    width: 196px;
+}
+
+.content__video-card-description-container:active {
+    background-color: #545050;
+    width: 196px;
+    height: 103px;
+}
+
+.content__video-card-description-container:hover {
+    text-decoration: underline;
+}
+
+.visually-hidden {
+    position: absolute;
+    inline-size: 1px;
+    block-size: 1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    white-space: nowrap;
+}
+
+.preloader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #545050;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
 }
 
 h1,
@@ -28,24 +351,26 @@ ol,
 li,
 blockquote,
 fieldset {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 ul,
 ol {
-  list-style: none;
+    list-style: none;
 }
 
+
 /* Кастомный скроллбар */
+
 .custom-scrollbar::-webkit-scrollbar {
-  width: 4px;
+    width: 4px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
-  background: rgb(217 217 217 / 10%);
+    background: rgb(217 217 217 / 10%);
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9;
+    background-color: #D9D9D9;
 }
