--- a/styles/style.css
+++ b/styles/style.css
@@ -48,6 +48,7 @@ html {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
 }
 
 .search-form {
@@ -75,13 +76,17 @@ html {
     font-weight: 400;
     font-size: 18px;
     line-height: 100%;
-    letter-spacing: 0%;
+    letter-spacing: normal;
     padding-bottom: 5px;
 }
 
 .search-form__label {
     display: flex;
     width: fit-content;
+    align-items: center;
+    gap: 5px;
+    text-align: left;
+    appearance: none;
 }
 
 .search-form__textfield {
@@ -89,7 +94,7 @@ html {
     font-weight: 400;
     font-size: 18px;
     line-height: 100%;
-    letter-spacing: 0%;
+    letter-spacing: normal;
     appearance: none;
     width: 225px;
     height: 27px;
@@ -97,7 +102,7 @@ html {
     border-width: 1px 0 1px 0;
     border-style: solid;
     border-color: #FFFFFF;
-    color: #FFFFFFB2;
+    color: #FFFFFF;
 }
 
 .search-form__textfield:focus {
@@ -114,13 +119,6 @@ html {
     border-radius: 0;
 }
 
-.search-form__label {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    text-align: left;
-}
-
 .search-form__pseudo-checkbox {
     display: inline-block;
     position: relative;
@@ -133,8 +131,8 @@ html {
 .search-form__pseudo-checkbox::after {
     content: "";
     position: absolute;
-    width: 17px;
-    height: 17px;
+    width: 15px;
+    height: 15px;
     background-color: #FFFFFF;
     opacity: 0;
     top: 50%;
@@ -161,7 +159,7 @@ html {
     font-weight: 700;
     font-size: 18px;
     line-height: 100%;
-    letter-spacing: 0%;
+    letter-spacing: normal;
     text-align: center;
     color: #FFFFFF;
     border: 1px solid #FFFFFF;
@@ -200,6 +198,16 @@ html {
     padding-bottom: 2px;
 }
 
+.more-button:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.more-button:focus-visible {
+    outline: 1px solid #FFFFFF;
+    border-radius: 0;
+}
+
 .content__details {
     grid-area: content__details;
     inline-size: 100%;
@@ -215,13 +223,12 @@ html {
 }
 
 .title {
-    font-family: Oswald;
+    font-family: Oswald, sans-serif;
     font-weight: 700;
     font-size: 75px;
     line-height: 94%;
-    letter-spacing: 0%;
+    letter-spacing: normal;
     text-transform: uppercase;
-    height: 210px;
     width: 259px;
 }
 
@@ -274,11 +281,11 @@ html {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    font-family: Oswald;
+    font-family: Oswald, sans-serif;
     font-weight: 700;
     font-size: 30px;
     line-height: 100%;
-    letter-spacing: 0%;
+    letter-spacing: normal;
     text-transform: uppercase;
     padding-bottom: 6px;
 }
@@ -294,13 +301,14 @@ html {
     font-weight: 400;
     font-size: 18px;
     line-height: 16.2px;
-    letter-spacing: 0%;
+    letter-spacing: normal;
 }
 
 .content__video-card-thumbnail {
     width: 194px;
     height: 103px;
-    object-position: cover;
+    object-position: center;
+    object-fit: cover;
 }
 
 .content__video-card-description-container {
@@ -326,19 +334,6 @@ html {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
     white-space: nowrap;
-}
-
-.preloader {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #545050;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 10;
 }
 
 h1,
